# cpp-vision-detector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
client/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  detect.proto
src/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp  server.h
src/service/: CMakeLists.txt  detector_server.cpp  detector_server.h  detector_service.cpp  detector_service.h
