cmake_minimum_required(VERSION 3.28.3)
project("cpp-vision-detector" VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)

include_directories(${CMAKE_SOURCE_DIR}/include)

add_subdirectory(./src)